--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="page">
     <header class="header">
-      <h2>Students</h2>
+      <h2 class="adjacent">Students</h2>
       
         <!-- Extra Credit: Dynamically insert search form here  
         
