--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <label for="search" class="student-search">
             <span>Search by name</span>
             <input id="search" placeholder="Search by name...">
-            <button type="submit" name="submit" value="submit"><img src="img/icn-search.svg" alt="Search icon"></button>
+            <button id='submit' type="submit" name="submit" value="submit"><img src="img/icn-search.svg" alt="Search icon"></button>
           </label>
         </form>
        
